Fix comments related to Insert event processing